@startuml
title Menu Class Diagram within the Restaurant Subdomain

package "Menusubdomain" {

    package "businesslayer" {
        interface MenuService {
            + getAllMenus() : Flux<MenuResponseModel>
            + getMenu(menuId: String) : Mono<MenuResponseModel>
            + addMenu(menuRequest: MenuRequestModel) : Mono<MenuResponseModel>
            + updateMenu(menuId: String, menuRequest: MenuRequestModel) : Mono<MenuResponseModel>
            + removeMenu(menuId: String) : Mono<Void>
        }

        class MenuServiceImpl {
            - menuRepository : MenuRepository
            + getAllMenus() : Flux<MenuResponseModel>
            + getMenu(menuId: String) : Mono<MenuResponseModel>
            + addMenu(menuRequest: MenuRequestModel) : Mono<MenuResponseModel>
            + updateMenu(menuId: String, menuRequest: MenuRequestModel) : Mono<MenuResponseModel>
            + removeMenu(menuId: String) : Mono<Void>
        }
    }

    package "datalayer" {
        class Menu {
            - MenuId : String
            - Description : String
            - price : int
            - Category : String
            - ItemImage: String
            - available: Status
        }

          enum Status {
                    - Available
                    - Not_Available
                }

        interface MenuRepository extends MongoRepository {
            + findAll() : Flux<Menu>
            + findById(menuId: String) : Mono<Menu>
            + save(menu: Menu) : Mono<Menu>
            + deleteById(menuId: String) : Mono<Void>
        }
    }

    package "Utils" {
        interface EntityDto {
            + requestModelToEntity(menuRequest: MenuRequestModel) : Menu
              + entityToResponseModel(menu: Menu) : MenuResponseModel
        }
    }

    package "presentationlayer" {
        class MenuRequestModel {
            - Description : String
            - price : int
            - Category : String
            - ItemImage: String
            - available: Status
        }

        class MenuResponseModel {
                - MenuId : String
                - Description : String
                - price : int
                - Category : String
                - ItemImage: String
                - available: Status
        }

        class MenuController {
            - menuService : MenuService
            + getAllMenus() : ResponseEntity<Flux<MenuResponseModel>>
            + getMenu(menuId: String) : ResponseEntity<Mono<MenuResponseModel>>
            + addMenu(menuRequest: MenuRequestModel) : ResponseEntity<Mono<MenuResponseModel>>
            + updateMenu(menuId: String, menuRequest: MenuRequestModel) : ResponseEntity<Mono<MenuResponseModel>>
            + removeMenu(menuId: String) : ResponseEntity<Mono<Void>>
        }
    }

    MenuServiceImpl -down-|> MenuService : implements
    MenuServiceImpl -down-> MenuRepository : uses
    MenuServiceImpl -down-> EntityDto : uses
    MenuServiceImpl -down-> EntityDto : uses
    MenuServiceImpl -down-> MenuRequestModel : uses
    MenuServiceImpl -down-> MenuResponseModel : uses
        EntityDto -left- MenuRequestModel : uses
        EntityDto -left- MenuResponseModel : uses

    EntityDto -left- Menu : data conversion
    EntityDto -right- Menu : data conversion
    MenuRepository -[hidden]-> Menu : data persistence
    MenuController -right-> MenuService : uses
    MenuController -down-> MenuRequestModel : uses
    MenuController -down-> MenuResponseModel : uses
    Menu -up-> Status : uses
}


title Order Class Diagram within the Noodle Star Domain

package "Order Management" <<Rectangle>> {

    package "businesslayer" {
        interface OrderService {
            + getAllOrders() : Flux<OrderResponseModel>
            + getOrder(orderId: UUID) : Mono<OrderResponseModel>
            + addOrder(orderRequest: OrderRequestModel) : Mono<OrderResponseModel>
            + updateOrder(orderId: UUID, orderRequest: OrderRequestModel) : Mono<OrderResponseModel>
            + cancelOrder(orderId: UUID) : Mono<Void>
            + getOrdersByCustomerId(customerId: UUID) : Flux<OrderResponseModel>
        }

        class OrderServiceImpl {
            - orderRepository : OrderRepository
            + getAllOrders() : Flux<OrderResponseModel>
            + getOrder(orderId: UUID) : Mono<OrderResponseModel>
            + addOrder(orderRequest: OrderRequestModel) : Mono<OrderResponseModel>
            + updateOrder(orderId: UUID, orderRequest: OrderRequestModel) : Mono<OrderResponseModel>
            + cancelOrder(orderId: UUID) : Mono<Void>
            + getOrdersByCustomerId(customerId: UUID) : Flux<OrderResponseModel>
        }
    }

    package "datalayer" {
        class Order {
            - orderId: UUID
            - customerId: UUID
            - status: String
            - orderDate: LocalDate
            - orderDetails: List<OrderDetails>
            - total: Double
        }

        class OrderDetails {
            - menuId: String
            - quantity: Integer
            - price: Double
        }

        interface OrderRepository {
            + findAll() : Flux<Order>
            + findById(orderId: UUID) : Mono<Order>
            + save(order: Order) : Mono<Order>
            + deleteById(orderId: UUID) : Mono<Void>
            + findByCustomerId(customerId: UUID) : Flux<Order>
        }
    }

    package "Utils" {
        interface EntityDtoUitls {
            + requestModelToEntity(orderRequest: OrderRequestModel) : Order
            + entityToResponseModel(order: Order) : OrderResponseModel
        }


    }

    package "presentationlayer" {
        class OrderRequestModel {
        - customerId: UUID
        - status: String
        - orderDate: LocalDate
        - orderDetails: List<OrderDetails>
        - total: Double
        }



        class OrderResponseModel {
            - orderId: UUID
            - customerId: UUID
            - status: String
            - orderDate: LocalDate
            - orderDetails: List<OrderDetails>
            - total: Double
        }

        class OrderDetailsResponseModel {
                    - menuId: String
                    - quantity: Integer
                    - price: Double
                }

        class OrderDetailsRequestModel {
                    - menuId: String
                    - quantity: Integer
                    - price: Double
                }



        class OrderController {
            - orderService : OrderService
            + getAllOrders() : ResponseEntity<Flux<OrderResponseModel>>
            + getOrder(orderId: UUID) : ResponseEntity<Mono<OrderResponseModel>>
            + addOrder(orderRequest: OrderRequestModel) : ResponseEntity<Mono<OrderResponseModel>>
            + updateOrder(orderId: UUID, orderRequest: OrderRequestModel) : ResponseEntity<Mono<OrderResponseModel>>
            + cancelOrder(orderId: UUID) : ResponseEntity<Mono<Void>>
            + getOrdersByCustomerId(customerId: UUID) : ResponseEntity<Flux<OrderResponseModel>>
        }
    }

       OrderServiceImpl -down-> OrderRequestModel : uses
        OrderServiceImpl -down-> OrderResponseModel : uses
        OrderRequestModel -down-> OrderDetailsRequestModel : uses
        OrderResponseModel -down-> OrderDetailsResponseModel : uses
            EntityDtoUitls -left- OrderRequestModel : uses
            EntityDtoUitls -left- OrderResponseModel : uses

    OrderServiceImpl -down-|> OrderService : implements
    OrderServiceImpl -down-> OrderRepository : uses
    OrderServiceImpl -down-> EntityDtoUitls : uses
    OrderServiceImpl -down-> EntityDtoUitls : uses
    EntityDtoUitls -left- Order : data conversion
    EntityDtoUitls -right- Order : data conversion
    OrderRepository -[hidden]-> Order : data persistence
    OrderController -right-> OrderService : uses
    OrderController -down-> OrderRequestModel : uses
    OrderController -down-> OrderResponseModel : uses
    Order *-- "1..*" OrderDetails : contains
}

OrderDetails -right-> Menu : references





package "ReviewSubdomain" {

    package "businesslayer" {
        interface ReviewService {
            + getAllReviews() : Flux<ReviewResponseModel>
            + getReview(reviewId: String) : Mono<ReviewResponseModel>
            + addReview(reviewRequest: ReviewRequestModel) : Mono<ReviewResponseModel>
            + updateReview(reviewId: String, reviewRequest: ReviewRequestModel) : Mono<ReviewResponseModel>
            + removeReview(reviewId: String) : Mono<Void>
        }

        class ReviewServiceImpl {
            - reviewRepository : ReviewRepository
            + getAllReviews() : Flux<ReviewResponseModel>
            + getReview(reviewId: String) : Mono<ReviewResponseModel>
            + addReview(reviewRequest: ReviewRequestModel) : Mono<ReviewResponseModel>
            + updateReview(reviewId: String, reviewRequest: ReviewRequestModel) : Mono<ReviewResponseModel>
            + removeReview(reviewId: String) : Mono<Void>
        }
    }

    package "datalayer" {
        class Review {
            - reviewId : String
            - rating : int
            - reviewerName : String
            - review : String
            - dateSubmitted : LocalDateTime
        }

        interface ReviewRepository extends MongoRepository {
            + findAll() : Flux<Review>
            + findById(reviewId: String) : Mono<Review>
            + save(review: Review) : Mono<Review>
            + deleteById(reviewId: String) : Mono<Void>
        }
    }

    package "Utils" {
        interface EntityDto {
            + requestModelToEntity(reviewRequest: ReviewRequestModel) : Review
            + entityToResponseModel(review: Review) : ReviewResponseModel
        }
    }

    package "presentationlayer" {
        class ReviewRequestModel {
            - rating : int
            - reviewerName : String
            - review : String
            - dateSubmitted : LocalDateTime
        }

        class ReviewResponseModel {
            - reviewId : String
            - rating : int
            - reviewerName : String
            - review : String
            - dateSubmitted : LocalDateTime
        }

        class ReviewController {
            - reviewService : ReviewService
            + getAllReviews() : ResponseEntity<Flux<ReviewResponseModel>>
            + getReview(reviewId: String) : ResponseEntity<Mono<ReviewResponseModel>>
            + addReview(reviewRequest: ReviewRequestModel) : ResponseEntity<Mono<ReviewResponseModel>>
            + updateReview(reviewId: String, reviewRequest: ReviewRequestModel) : ResponseEntity<Mono<ReviewResponseModel>>
            + removeReview(reviewId: String) : ResponseEntity<Mono<Void>>
        }
    }

    ReviewServiceImpl -down-|> ReviewService : implements
    ReviewServiceImpl -down-> ReviewRepository : uses
    ReviewServiceImpl -down-> EntityDto : uses
    ReviewServiceImpl -down-> ReviewRequestModel : uses
    ReviewServiceImpl -down-> ReviewResponseModel : uses
    EntityDto -left- ReviewRequestModel : uses
    EntityDto -left- ReviewResponseModel : uses

    EntityDto -left- Review : data conversion
    EntityDto -right- Review : data conversion
    ReviewRepository -[hidden]-> Review : data persistence
    ReviewController -right-> ReviewService : uses
    ReviewController -down-> ReviewRequestModel : uses
    ReviewController -down-> ReviewResponseModel : uses
}

@enduml
